--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^7.2.0",
     "@types/node": "^17.0.35",
     "nodemon": "^2.0.16",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "fs-extra": "^10.1.0",
+    "glob": "^8.0.3"
   }
 }
