update bin name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "A smart copy CLI",
   "main": "bin/main.js",
-  "bin": "bin/main.js",
+  "bin": {
+    "smart-copy": "bin/main.js"
+  },
   "scripts": {
     "start:dev": "nodemon",
     "build": "tsc",
