using tsup to build

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "smart-copy-cli",
   "version": "0.0.0",
   "description": "A smart copy CLI",
-  "main": "bin/src/main.js",
+  "main": "bin/main.js",
   "bin": {
-    "smart-copy": "bin/src/main.js"
+    "smart-copy": "bin/main.js"
   },
+  "files": [
+    "bin/main.js"
+  ],
   "scripts": {
     "start:dev": "nodemon",
-    "build": "tsc",
+    "build": "tsup src/main.ts --format cjs --clean --out-dir bin",
     "start": "npm run build && node bin/main.js"
   },
   "repository": {
@@ -31,6 +34,7 @@
     "@types/glob": "^7.2.0",
     "@types/node": "^17.0.35",
     "nodemon": "^2.0.16",
+    "tsup": "^5.12.8",
     "typescript": "^4.6.4"
   },
   "dependencies": {
