--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "smart-copy-cli",
-  "version": "1.0.1",
-  "description": "A smart copy CLI",
-  "main": "bin/main.js",
-  "binName": "smart-copy",
-  "bin": {
-    "smart-copy": "bin/main.js"
-  },
-  "files": [
-    "bin/main.js"
-  ],
-  "scripts": {
-    "start:dev": "nodemon",
-    "build": "tsup src/main.ts --format cjs --clean --out-dir bin",
-    "start": "npm run build && node bin/main.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://stevancorre.com/smart-copy-cli"
-  },
-  "keywords": [
-    "npm",
-    "smart",
-    "copy",
-    "cli"
-  ],
-  "author": {
-    "email": "me@stevancorre.com",
-    "name": "Stévan Corre"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/glob": "^7.2.0",
-    "@types/node": "^17.0.35",
-    "nodemon": "^2.0.16",
-    "tsup": "^5.12.8",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "commander": "^9.2.0",
-    "fs-extra": "^10.1.0",
-    "glob": "^8.0.3"
-  }
+    "name": "smart-copy-cli",
+    "version": "1.0.2",
+    "description": "A smart copy CLI",
+    "main": "bin/main.js",
+    "binName": "smart-copy",
+    "bin": {
+        "smart-copy": "bin/main.js"
+    },
+    "files": [
+        "bin/main.js"
+    ],
+    "scripts": {
+        "start:dev": "nodemon",
+        "build": "tsup src/main.ts --format cjs --clean --out-dir bin",
+        "start": "npm run build && node bin/main.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/stevancorre/smart-copy-cli"
+    },
+    "keywords": [
+        "npm",
+        "smart",
+        "copy",
+        "cli"
+    ],
+    "author": {
+        "email": "me@stevancorre.com",
+        "name": "Stévan Corre"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@types/fs-extra": "^9.0.13",
+        "@types/glob": "^7.2.0",
+        "@types/node": "^17.0.35",
+        "nodemon": "^2.0.16",
+        "tsup": "^5.12.8",
+        "typescript": "^4.6.4"
+    },
+    "dependencies": {
+        "commander": "^9.2.0",
+        "fs-extra": "^10.1.0",
+        "glob": "^8.0.3"
+    }
 }
